<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="take">Take</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">logo</string>
    <string name="title_activity_login_out">LoginOut</string>
</resources>
